--- a/app/views/static/homepage.html.erb
+++ b/app/views/static/homepage.html.erb
@@ -1,1 +1,11 @@
-<h1>From the homepage</h1>
+<div class="jumbotron">
+  <h2>
+    Hello, world!
+  </h2>
+  <p>
+    This is a template
+  </p>
+  <p>
+    <a href="#" class="btn btn-primary btn-large">Learn more</a>
+  </p>
+</div>
